ltsp-webmin (0.5.3-1) unstable; urgency=low

  * debian/rules: binary does not depend on build-arch, since we have no
    architecture dependant package. This suppresses an error message
    from dh_testdir.
  * new options for LTSP 2.09pre2 from Robert Stanford
  * rpm now available
  * depends now on webmin (>= 0.87) | webmin-ssl (>= 0.87), to make sure
    we are using the official package and not the old one from
    opal@debian.org. Unfortunately versioned dependencies don't work with
    virtual packages;-(
  * added postinst and prerm with a call to update-webmin
  * module.info: we depend now on webmin >= 0.81, because we use file locking

 -- Georg Baum <gbaum@users.sourceforge.net>  Tue, 17 Jul 2001 08:30:58 +0200

ltsp-webmin (0.5.2-2) unstable; urgency=low

  * Depends now on lts-core, since it is available now.
  * Therefore removed README.Debian

 -- Georg Baum <gbaum@users.sourceforge.net>  Sat, 7 Jul 2001 15:19:34 +0200

ltsp-webmin (0.5.2-1) stable; urgency=low

  * New version.

 -- Christian Selig <sledge@users.berlios.de>  Thu, 5 Jun 2001 22:40:30 +0100

ltsp-webmin (0.5.1-1) stable; urgency=low

  * New version.

 -- Christian Selig <sledge@users.berlios.de>  Thu, 12 May 2001 19:17:30 +0100

ltsp-webmin (0.5-1) unstable; urgency=low

  * New version.

 -- Georg Baum <gbaum@users.sourceforge.net>  Tue, 20 Feb 2001 21:51:30 +0100

ltsp-webmin (0.2-1) unstable; urgency=low

  * Initial Release.

 -- Georg Baum <gbaum@users.sourceforge.net>  Sat, 27 Jan 2001 14:08:44 +0100

Local variables:
mode: debian-changelog
End: