@@ -24,7 +24,7 @@ $EXPERIMENTAL = 1;
   "2.09pre3" => 2083,
   "2.09pre4" => 2084,
   "2.09"     => 2090,
-  "3.00"     => 3000
+  "3.0.0"    => 3000
 );
 
 return TRUE;
