@@ -212,3 +212,23 @@ X_TOUCH_MINY=Touchscreen ymin
 X_TOUCH_RPTDELAY=Touchscreen repeat delay
 X_TOUCH_UNDELAY=Touchscreen delay
 touchscreen_settings=Touchscreen Einstellungen
+X_RES_1=Resolution
+DISABLE_ACCESS_CONTROL=Disable xserver access control
+PRINTER_0_OPTIONS=Additional options for printer 0
+PRINTER_0_WRITE_ONLY=Open printer port 0 in write only mode
+PRINTER_1_OPTIONS=Additional options for printer 1
+PRINTER_1_WRITE_ONLY=Open printer port 1 in write only mode
+PRINTER_2_OPTIONS=Additional options for printer 2
+PRINTER_2_WRITE_ONLY=Open printer port 2 in write only mode
+SOUND=Use sound
+X_DEVICE_OPTION_01=Additional option 1 for the video device
+X_DEVICE_OPTION_02=Additional option 2 for the video device
+X_DEVICE_OPTION_03=Additional option 3 for the video device
+X_DEVICE_OPTION_04=Additional option 4 for the video device
+X_DEVICE_OPTION_05=Additional option 5 for the video device
+X_DEVICE_OPTION_06=Additional option 6 for the video device
+X_DEVICE_OPTION_07=Additional option 7 for the video device
+X_DEVICE_OPTION_08=Additional option 8 for the video device
+X_DEVICE_OPTION_09=Additional option 9 for the video device
+X_DEVICE_OPTION_10=Additional option 10 for the video device
+X_VIDEORAM=Amount of video ram
