@@ -1,10 +1,10 @@
-network_settings=LTSP_BASEDIR,SERVER,DNS_SERVER,SEARCH_DOMAIN,NFS_SERVER,NIS_SERVER,XDM_SERVER,XFS_SERVER,SYSLOG_HOST,TELNET_HOST,TELNET_SESSIONS,RAMDISK_SIZE,USE_NFS_SWAP,SWAP_SERVER,NFS_SWAPDIR,SWAPFILE_SIZE,RUNLEVEL,UI_MODE,LOCAL_APPS,LOCAL_WM,NIS_DOMAIN,XF86CONFIG_FILE
+network_settings=LTSP_BASEDIR,SERVER,DNS_SERVER,SEARCH_DOMAIN,NFS_SERVER,NIS_SERVER,XDM_SERVER,XFS_SERVER,SYSLOG_HOST,TELNET_HOST,TELNET_SESSIONS,RAMDISK_SIZE,USE_NFS_SWAP,SWAP_SERVER,NFS_SWAPDIR,SWAPFILE_SIZE,RUNLEVEL,UI_MODE,LOCAL_APPS,LOCAL_WM,NIS_DOMAIN,XF86CONFIG_FILE,DISABLE_ACCESS_CONTROL,SOUND
 boot_settings=RCFILE_01,RCFILE_02,RCFILE_03,RCFILE_04,RCFILE_05,RCFILE_06,RCFILE_07,RCFILE_08,RCFILE_09,RCFILE_10
 loadable_module_settings=MODULE_01,MODULE_02,MODULE_03,MODULE_04,MODULE_05,MODULE_06,MODULE_07,MODULE_08,MODULE_09,MODULE_10
-graphics_card_settings=XSERVER,X_RES_1,X4_DRIVER,X4_DRI,X4_BUSID,X_MODE_0,X_MODE_1,X_MODE_2,X_COLOR_DEPTH,X_MODE_640x480,X_MODE_800x600,X_MODE_1024x768,X_HORZSYNC,X_VERTREFRESH,USE_XFS,X4_MODULE_01,X4_MODULE_02,X4_MODULE_03,X4_MODULE_04,X4_MODULE_05,X4_MODULE_06,X4_MODULE_07,X4_MODULE_08,X4_MODULE_09,X4_MODULE_10
+graphics_card_settings=XSERVER,X_RES_1,X4_DRIVER,X4_DRI,X4_BUSID,X_MODE_0,X_MODE_1,X_MODE_2,X_COLOR_DEPTH,X_MODE_640x480,X_MODE_800x600,X_MODE_1024x768,X_HORZSYNC,X_VERTREFRESH,USE_XFS,X4_MODULE_01,X4_MODULE_02,X4_MODULE_03,X4_MODULE_04,X4_MODULE_05,X4_MODULE_06,X4_MODULE_07,X4_MODULE_08,X4_MODULE_09,X4_MODULE_10,X_VIDEORAM,X_DEVICE_OPTION_01,X_DEVICE_OPTION_02,X_DEVICE_OPTION_03,X_DEVICE_OPTION_04,X_DEVICE_OPTION_05,X_DEVICE_OPTION_06,X_DEVICE_OPTION_07,X_DEVICE_OPTION_08,X_DEVICE_OPTION_09,X_DEVICE_OPTION_10
 keyboard_settings=XkbModel,XkbLayout,XkbCompat,XkbTypes,XkbSymbols
 mouse_settings=X_MOUSE_PROTOCOL,X_MOUSE_DEVICE,X_MOUSE_BAUD,X_MOUSE_BUTTONS,X_MOUSE_EMULATE3BTN,X_MOUSE_RESOLUTION
-printer_0_settings=PRINTER_0_TYPE,PRINTER_0_DEVICE,PRINTER_0_PORT,PRINTER_0_SPEED,PRINTER_0_FLOWCTRL,PRINTER_0_PARITY,PRINTER_0_DATABITS
-printer_1_settings=PRINTER_1_TYPE,PRINTER_1_DEVICE,PRINTER_1_PORT,PRINTER_1_SPEED,PRINTER_1_FLOWCTRL,PRINTER_1_PARITY,PRINTER_1_DATABITS
-printer_2_settings=PRINTER_2_TYPE,PRINTER_2_DEVICE,PRINTER_2_PORT,PRINTER_2_SPEED,PRINTER_2_FLOWCTRL,PRINTER_2_PARITY,PRINTER_2_DATABITS
+printer_0_settings=PRINTER_0_TYPE,PRINTER_0_DEVICE,PRINTER_0_PORT,PRINTER_0_SPEED,PRINTER_0_FLOWCTRL,PRINTER_0_PARITY,PRINTER_0_DATABITS,PRINTER_0_OPTIONS,PRINTER_0_WRITE_ONLY
+printer_1_settings=PRINTER_1_TYPE,PRINTER_1_DEVICE,PRINTER_1_PORT,PRINTER_1_SPEED,PRINTER_1_FLOWCTRL,PRINTER_1_PARITY,PRINTER_1_DATABITS,PRINTER_1_OPTIONS,PRINTER_1_WRITE_ONLY
+printer_2_settings=PRINTER_2_TYPE,PRINTER_2_DEVICE,PRINTER_2_PORT,PRINTER_2_SPEED,PRINTER_2_FLOWCTRL,PRINTER_2_PARITY,PRINTER_2_DATABITS,PRINTER_2_OPTIONS,PRINTER_2_WRITE_ONLY
 touchscreen_settings=USE_TOUCH,X_TOUCH_DEVICE,X_TOUCH_MINX,X_TOUCH_MAXX,X_TOUCH_MINY,X_TOUCH_MAXY,X_TOUCH_UNDELAY,X_TOUCH_RPTDELAY
